fix: missing color for high issue; also change verbiage for link

--- a/src/components/signal-detail-sidebar/styles.scss
+++ b/src/components/signal-detail-sidebar/styles.scss
@@ -70,7 +70,7 @@
               background: $critical;
             }
 
-            &.warning {
+            &.warning, &.high {
               background: $warning;
             }
 
